web to rostopic finished

--- a/tb3_web/tb3_race-Xian.html
+++ b/tb3_web/tb3_race-Xian.html
@@ -113,7 +113,7 @@
                                         name="MapSwitchElement"
                                         style="width:74px;height:26px
                                         ;border:2px rgb(255, 0, 0) double;background-color:rgb(255, 192, 192);"
-                                        onclick="Map_control(this.value)"
+                                        onclick="Map_control(this.value);"
                                     >MapSend</button>
                                 </div>
                             </td>
